<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/stat_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8" />

    <TextView
        android:text="#ЗНАЧ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9" />

    <TextView
        android:text="@string/stat_endl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10" />

    <TextView
        android:text="#ЗНАЧ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11" />

    <TextView
        android:text="@string/stat_surv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView122" />

    <TextView
        android:text="#ЗНАЧ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13" />

</LinearLayout>