<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/text_on_glass"
                android:id="@+id/glass1"
                android:textColor="@color/glass1color"
                android:layout_weight="1"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/glass3color"
                android:textSize="@dimen/text_on_glass"
                android:id="@+id/glass3"
                android:layout_weight="1"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/glass2color"
                android:textSize="@dimen/text_on_glass"
                android:id="@+id/glass2"
                android:layout_weight="1"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTarget"
                android:textSize="@dimen/most_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_lbl" />

            <Button
                android:id="@+id/buttonNeedHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_help_button" />

            <Button
                android:id="@+id/buttonGiveUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/give_up_button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>